--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         }
     ],
     "require": {
-        "php": ">=7.4",
+        "php": ">=7",
         "illuminate/support": "^5.5|^6",
         "dompdf/dompdf": "dev-master"
     },
 
     "autoload": {
         "psr-4": {
-            "yasapurnama\\DomPDF\\": "src"
+            "Barryvdh\\DomPDF\\": "src"
         }
     },
     "extra": {
@@ -26,10 +26,10 @@
         },
         "laravel": {
             "providers": [
-                "yasapurnama\\DomPDF\\ServiceProvider"
+                "Barryvdh\\DomPDF\\ServiceProvider"
             ],
             "aliases": {
-                "PDF": "yasapurnama\\DomPDF\\Facade"
+                "PDF": "Barryvdh\\DomPDF\\Facade"
             }
         }
     },
