--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "php": ">=7",
         "illuminate/support": "^5.5|^6",
-        "dompdf/dompdf": "dev-master"
+        "dompdf/dompdf": "dev-develop"
     },
 
     "autoload": {
